# serializer version: 1
# name: test_numbers[number.device_name_away_extract_fan_setpoint-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 70,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 30,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.SLIDER: 'slider'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 1,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': None,
    'entity_id': 'number.device_name_away_extract_fan_setpoint',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Away extract fan setpoint',
    'options': dict({
    }),
    'original_device_class': <NumberDeviceClass.POWER_FACTOR: 'power_factor'>,
    'original_icon': None,
    'original_name': 'Away extract fan setpoint',
    'platform': 'flexit_bacnet',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'away_extract_fan_setpoint',
    'unique_id': '0000-0001-away_extract_fan_setpoint',
    'unit_of_measurement': '%',
  })
# ---
# name: test_numbers[number.device_name_away_extract_fan_setpoint-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'power_factor',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Device Name Away extract fan setpoint',
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 70,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 30,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.SLIDER: 'slider'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 1,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: '%',
    }),
    'context': <ANY>,
    'entity_id': 'number.device_name_away_extract_fan_setpoint',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '40',
  })
# ---
# name: test_numbers[number.device_name_away_supply_fan_setpoint-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 74,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 30,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.SLIDER: 'slider'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 1,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': None,
    'entity_id': 'number.device_name_away_supply_fan_setpoint',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Away supply fan setpoint',
    'options': dict({
    }),
    'original_device_class': <NumberDeviceClass.POWER_FACTOR: 'power_factor'>,
    'original_icon': None,
    'original_name': 'Away supply fan setpoint',
    'platform': 'flexit_bacnet',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'away_supply_fan_setpoint',
    'unique_id': '0000-0001-away_supply_fan_setpoint',
    'unit_of_measurement': '%',
  })
# ---
# name: test_numbers[number.device_name_away_supply_fan_setpoint-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'power_factor',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Device Name Away supply fan setpoint',
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 74,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 30,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.SLIDER: 'slider'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 1,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: '%',
    }),
    'context': <ANY>,
    'entity_id': 'number.device_name_away_supply_fan_setpoint',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '42',
  })
# ---
# name: test_numbers[number.device_name_cooker_hood_extract_fan_setpoint-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 100,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 30,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.SLIDER: 'slider'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 1,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': None,
    'entity_id': 'number.device_name_cooker_hood_extract_fan_setpoint',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Cooker hood extract fan setpoint',
    'options': dict({
    }),
    'original_device_class': <NumberDeviceClass.POWER_FACTOR: 'power_factor'>,
    'original_icon': None,
    'original_name': 'Cooker hood extract fan setpoint',
    'platform': 'flexit_bacnet',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'cooker_hood_extract_fan_setpoint',
    'unique_id': '0000-0001-cooker_hood_extract_fan_setpoint',
    'unit_of_measurement': '%',
  })
# ---
# name: test_numbers[number.device_name_cooker_hood_extract_fan_setpoint-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'power_factor',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Device Name Cooker hood extract fan setpoint',
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 100,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 30,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.SLIDER: 'slider'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 1,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: '%',
    }),
    'context': <ANY>,
    'entity_id': 'number.device_name_cooker_hood_extract_fan_setpoint',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '50',
  })
# ---
# name: test_numbers[number.device_name_cooker_hood_supply_fan_setpoint-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 100,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 30,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.SLIDER: 'slider'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 1,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': None,
    'entity_id': 'number.device_name_cooker_hood_supply_fan_setpoint',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Cooker hood supply fan setpoint',
    'options': dict({
    }),
    'original_device_class': <NumberDeviceClass.POWER_FACTOR: 'power_factor'>,
    'original_icon': None,
    'original_name': 'Cooker hood supply fan setpoint',
    'platform': 'flexit_bacnet',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'cooker_hood_supply_fan_setpoint',
    'unique_id': '0000-0001-cooker_hood_supply_fan_setpoint',
    'unit_of_measurement': '%',
  })
# ---
# name: test_numbers[number.device_name_cooker_hood_supply_fan_setpoint-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'power_factor',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Device Name Cooker hood supply fan setpoint',
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 100,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 30,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.SLIDER: 'slider'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 1,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: '%',
    }),
    'context': <ANY>,
    'entity_id': 'number.device_name_cooker_hood_supply_fan_setpoint',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '70',
  })
# ---
# name: test_numbers[number.device_name_fireplace_extract_fan_setpoint-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 100,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 30,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.SLIDER: 'slider'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 1,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': None,
    'entity_id': 'number.device_name_fireplace_extract_fan_setpoint',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Fireplace extract fan setpoint',
    'options': dict({
    }),
    'original_device_class': <NumberDeviceClass.POWER_FACTOR: 'power_factor'>,
    'original_icon': None,
    'original_name': 'Fireplace extract fan setpoint',
    'platform': 'flexit_bacnet',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'fireplace_extract_fan_setpoint',
    'unique_id': '0000-0001-fireplace_extract_fan_setpoint',
    'unit_of_measurement': '%',
  })
# ---
# name: test_numbers[number.device_name_fireplace_extract_fan_setpoint-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'power_factor',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Device Name Fireplace extract fan setpoint',
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 100,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 30,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.SLIDER: 'slider'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 1,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: '%',
    }),
    'context': <ANY>,
    'entity_id': 'number.device_name_fireplace_extract_fan_setpoint',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '56',
  })
# ---
# name: test_numbers[number.device_name_fireplace_mode_runtime-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 360,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 1,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.SLIDER: 'slider'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 1,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': None,
    'entity_id': 'number.device_name_fireplace_mode_runtime',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Fireplace mode runtime',
    'options': dict({
    }),
    'original_device_class': <NumberDeviceClass.DURATION: 'duration'>,
    'original_icon': None,
    'original_name': 'Fireplace mode runtime',
    'platform': 'flexit_bacnet',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'fireplace_mode_runtime',
    'unique_id': '0000-0001-fireplace_mode_runtime',
    'unit_of_measurement': <UnitOfTime.MINUTES: 'min'>,
  })
# ---
# name: test_numbers[number.device_name_fireplace_mode_runtime-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'duration',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Device Name Fireplace mode runtime',
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 360,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 1,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.SLIDER: 'slider'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 1,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfTime.MINUTES: 'min'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.device_name_fireplace_mode_runtime',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '10',
  })
# ---
# name: test_numbers[number.device_name_fireplace_supply_fan_setpoint-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 100,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 30,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.SLIDER: 'slider'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 1,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': None,
    'entity_id': 'number.device_name_fireplace_supply_fan_setpoint',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Fireplace supply fan setpoint',
    'options': dict({
    }),
    'original_device_class': <NumberDeviceClass.POWER_FACTOR: 'power_factor'>,
    'original_icon': None,
    'original_name': 'Fireplace supply fan setpoint',
    'platform': 'flexit_bacnet',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'fireplace_supply_fan_setpoint',
    'unique_id': '0000-0001-fireplace_supply_fan_setpoint',
    'unit_of_measurement': '%',
  })
# ---
# name: test_numbers[number.device_name_fireplace_supply_fan_setpoint-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'power_factor',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Device Name Fireplace supply fan setpoint',
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 100,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 30,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.SLIDER: 'slider'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 1,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: '%',
    }),
    'context': <ANY>,
    'entity_id': 'number.device_name_fireplace_supply_fan_setpoint',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '77',
  })
# ---
# name: test_numbers[number.device_name_high_extract_fan_setpoint-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 100,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 70,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.SLIDER: 'slider'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 1,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': None,
    'entity_id': 'number.device_name_high_extract_fan_setpoint',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'High extract fan setpoint',
    'options': dict({
    }),
    'original_device_class': <NumberDeviceClass.POWER_FACTOR: 'power_factor'>,
    'original_icon': None,
    'original_name': 'High extract fan setpoint',
    'platform': 'flexit_bacnet',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'high_extract_fan_setpoint',
    'unique_id': '0000-0001-high_extract_fan_setpoint',
    'unit_of_measurement': '%',
  })
# ---
# name: test_numbers[number.device_name_high_extract_fan_setpoint-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'power_factor',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Device Name High extract fan setpoint',
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 100,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 70,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.SLIDER: 'slider'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 1,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: '%',
    }),
    'context': <ANY>,
    'entity_id': 'number.device_name_high_extract_fan_setpoint',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '100',
  })
# ---
# name: test_numbers[number.device_name_high_supply_fan_setpoint-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 100,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 74,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.SLIDER: 'slider'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 1,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': None,
    'entity_id': 'number.device_name_high_supply_fan_setpoint',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'High supply fan setpoint',
    'options': dict({
    }),
    'original_device_class': <NumberDeviceClass.POWER_FACTOR: 'power_factor'>,
    'original_icon': None,
    'original_name': 'High supply fan setpoint',
    'platform': 'flexit_bacnet',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'high_supply_fan_setpoint',
    'unique_id': '0000-0001-high_supply_fan_setpoint',
    'unit_of_measurement': '%',
  })
# ---
# name: test_numbers[number.device_name_high_supply_fan_setpoint-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'power_factor',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Device Name High supply fan setpoint',
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 100,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 74,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.SLIDER: 'slider'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 1,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: '%',
    }),
    'context': <ANY>,
    'entity_id': 'number.device_name_high_supply_fan_setpoint',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '100',
  })
# ---
# name: test_numbers[number.device_name_home_extract_fan_setpoint-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 100,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 40,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.SLIDER: 'slider'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 1,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': None,
    'entity_id': 'number.device_name_home_extract_fan_setpoint',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Home extract fan setpoint',
    'options': dict({
    }),
    'original_device_class': <NumberDeviceClass.POWER_FACTOR: 'power_factor'>,
    'original_icon': None,
    'original_name': 'Home extract fan setpoint',
    'platform': 'flexit_bacnet',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'home_extract_fan_setpoint',
    'unique_id': '0000-0001-home_extract_fan_setpoint',
    'unit_of_measurement': '%',
  })
# ---
# name: test_numbers[number.device_name_home_extract_fan_setpoint-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'power_factor',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Device Name Home extract fan setpoint',
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 100,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 40,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.SLIDER: 'slider'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 1,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: '%',
    }),
    'context': <ANY>,
    'entity_id': 'number.device_name_home_extract_fan_setpoint',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '70',
  })
# ---
# name: test_numbers[number.device_name_home_supply_fan_setpoint-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 100,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 42,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.SLIDER: 'slider'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 1,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': None,
    'entity_id': 'number.device_name_home_supply_fan_setpoint',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Home supply fan setpoint',
    'options': dict({
    }),
    'original_device_class': <NumberDeviceClass.POWER_FACTOR: 'power_factor'>,
    'original_icon': None,
    'original_name': 'Home supply fan setpoint',
    'platform': 'flexit_bacnet',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'home_supply_fan_setpoint',
    'unique_id': '0000-0001-home_supply_fan_setpoint',
    'unit_of_measurement': '%',
  })
# ---
# name: test_numbers[number.device_name_home_supply_fan_setpoint-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'power_factor',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Device Name Home supply fan setpoint',
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 100,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 42,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.SLIDER: 'slider'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 1,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: '%',
    }),
    'context': <ANY>,
    'entity_id': 'number.device_name_home_supply_fan_setpoint',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '74',
  })
# ---
